syntax = "proto3";

package credo.common.v1;

option go_package = "github.com/credo/gateway/api/proto/common;commonpb";

import "google/protobuf/timestamp.proto";

// Standard error response for gRPC services
message Error {
  string code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Metadata for tracing and correlation
message RequestMetadata {
  string request_id = 1;
  string user_id = 2;
  string session_id = 3;
  string client_id = 4;
  google.protobuf.Timestamp timestamp = 5;
}